rename env reorganize errors vars fix docs
